axum-macros/tests/debug_handler/fail/extension_not_clone.stderr
error[E0277]: the trait bound `NonCloneType: Clone` is not satisfied
 --> tests/debug_handler/fail/extension_not_clone.rs:7:38
  |
7 | async fn test_extension_non_clone(_: Extension<NonCloneType>) {}
  |                                      ^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `NonCloneType`, which is required by `Extension<NonCloneType>: FromRequest<(), _>`
  |
  = help: the following other types implement trait `FromRequest<S, M>`:
            Body
            Form<T>
            Json<T>
            RawForm
            Result<T, <T as FromRequest<S>>::Rejection>
            String
            axum::body::Bytes
            axum::http::Request<Body>
  = note: required for `Extension<NonCloneType>` to implement `FromRequestParts<()>`
  = note: required for `Extension<NonCloneType>` to implement `FromRequest<(), axum_core::extract::private::ViaParts>`
note: required by a bound in `__axum_macros_check_test_extension_non_clone_0_from_request_check`
 --> tests/debug_handler/fail/extension_not_clone.rs:7:38
  |
7 | async fn test_extension_non_clone(_: Extension<NonCloneType>) {}
  |                                      ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__axum_macros_check_test_extension_non_clone_0_from_request_check`
help: consider annotating `NonCloneType` with `#[derive(Clone)]`
  |
4 + #[derive(Clone)]
5 | struct NonCloneType;
  |
